updated way to run main.java